Add fixtures, path

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,20 @@
 <!doctype html>
-<!--
-   _
- _/_\ ___| |_ _ _ _ __ _____ _____
- //_\\ / __| __| | | | '_ \ / _ \ \ /\ / / __|
-/ _ \ (__| |_| |_| | | | | __/\  V V /\__ \\_
-/ \_/\___|\__|\__,_|_| |_|\___|  \_/\_/ |___/-->
+{#//........................................................................................
+//.....AAAAA...............tttt...........................................................
+//.....AAAAA...............tttt...........................................................
+//....AAAAAAA..............tttt...........................................................
+//....AAAAAAA.....ccccccc.cttttttuuu...uuu..nnnnnnnnn...eeeeee..ewww.wwww.wwww.ssssssss...
+//....AAAAAAA....ccccccccccttttttuuu...uuu..nnnnnnnnn..eeeeeeee.ewww.wwww.wwww.ssssssss...
+//...AAAAAAAAA..cccccccccccttttttuuu...uuu..nnnnnnnnn.eeeeeeeeeeewww.wwww.wwwwwsssssssss..
+//...AAAA.AAAA..cccc..cccc.tttt.tuuu...uuu..nnnn.nnnn.eeee..eeeeewwwwwwwwwwwwwwsssssssss..
+//...AAAAAAAAAA.cccc.......tttt.tuuu...uuu..nnn...nnn.eeeeeeeeee.wwwwwwwwwwww..ssssssss...
+//..AAAAAAAAAAA.cccc.......tttt.tuuu...uuu..nnn...nnn.eeeeeeeeee.wwwwwwwwwwww..ssssssss...
+//..AAAAAAAAAAA.cccc..cccc.tttt..uuu..uuuu..nnn...nnn.eeee.......wwwwwwwwwwww.wsssssssss..
+//..AAAAAAAAAAAAcccccccccc.tttt..uuuuuuuuu..nnn...nnn.eeeeeeeeee.wwwwwwwwwww..wssss.ssss..
+//.AAAAA....AAAA.cccccccc..ttttt.uuuuuuuuu..nnn...nnn.eeeeeeeee...wwww.wwwww..wsssssssss..
+//.AAAA.....AAAA.cccccccc..ttttt.uuuuuuuuu..nnn...nnn..eeeeeeee...wwww..wwww...ssssssss...
+//.................cccc......ttt...uuu...................eeee...................ssssss....
+//........................................................................................#}
 
 
 <html lang="fr">
