--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -8,38 +8,18 @@
     <div class="py-5 bg-light">
         <div class="container">
             <div class="row">
+                {% for post in posts %}
                 <div class="col-md-4 mt-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/550x300" class="card-img-top"                            alt="...">
+                        <img src="{{ post.image }}" class="card-img-top"                            alt="{{ post.name }}">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">{{ post.name }}</h5>
+{#                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>#}
+                            <a href="#" class="btn btn-primary">Lire la suite</a>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-4 mt-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/550x300" class="card-img-top"                            alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 mt-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/550x300" class="card-img-top"                            alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
